Still bug fix overflow x

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 
-Body {
+body {
     font-family: 'Barlow', sans-serif;
     font-weight: 600;
     font-size: clamp(1.125rem, 2.5vw, 1.3rem);
@@ -13,7 +13,7 @@ Body {
 }
 
 .container {
-    max-width: 1100px;
+    max-width: 1400px;
     margin: 0 auto;
     position: relative;
     overflow-x: hidden;
